update logo and brand name in header for website redesign

--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
             <div class="flex justify-between items-center">
                 <!-- Logo Placeholder -->
                 <div class="flex items-center space-x-3">
-                    <div class="w-10 h-10 bg-[#FF4500] text-white flex items-center justify-center rounded-lg text-2xl font-bold shadow-md">
-                        V
+                    <div class="w-10 h-10 flex items-center justify-center rounded-lg shadow-md">
+                        <img src="https://vespineit.com/images/vespine.png" alt="VespineIT Logo" class="h-full w-auto object-contain">
                     </div>
-                    <span class="text-2xl font-bold text-gray-900">VespineIT</span>
+                    <span class="text-2xl font-bold text-gray-900">vespineiT</span>
                 </div>
                 <div class="text-right">
                     <h1 class="text-2xl md:text-3xl font-bold text-gray-900">Website Redesign Proposal</h1>
