--- a/index.html
+++ b/index.html
@@ -199,6 +199,38 @@
             color: var(--primary);
         }
 
+        /* Additional Mobile Optimizations */
+        @media (max-width: 768px) {
+            header .flex {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+            header .text-right {
+                text-align: left;
+                margin-top: 1rem;
+            }
+            h1 {
+                font-size: 1.5rem; /* Smaller on mobile */
+            }
+            h2 {
+                font-size: 1.25rem;
+            }
+            h3 {
+                font-size: 1rem;
+            }
+            .price-display .amount {
+                font-size: 2rem;
+            }
+            .btn-primary {
+                width: 100%;
+                justify-content: center;
+            }
+            table th, table td {
+                padding: 0.5rem;
+                font-size: 0.875rem;
+            }
+        }
+
     </style>
 </head>
 <body class="bg-gray-100 p-4 md:p-10">
@@ -206,15 +238,15 @@
     <main class="max-w-5xl mx-auto bg-white shadow-xl rounded-lg overflow-hidden">
         <!-- Header & Logo -->
         <header class="p-6 md:p-8 border-b border-gray-200 bg-white">
-            <div class="flex justify-between items-center">
+            <div class="flex flex-wrap justify-between items-center">
                 <!-- Logo Placeholder -->
                 <div class="flex items-center space-x-3">
                     <div class="w-10 h-10 flex items-center justify-center rounded-lg shadow-md">
                         <img src="https://vespineit.com/images/vespine.png" alt="VespineIT Logo" class="h-full w-auto object-contain">
                     </div>
-                    <span class="text-2xl font-bold text-gray-900">vespineiT</span>
+                    <span class="text-2xl font-bold text-gray-900">VespineIT</span>
                 </div>
-                <div class="text-right">
+                <div class="text-right md:text-right">
                     <h1 class="text-2xl md:text-3xl font-bold text-gray-900">Website Redesign Proposal</h1>
                     <p class="text-md text-gray-500">Prepared for DPV Offshore</p>
                 </div>
@@ -410,7 +442,6 @@
                                     <tr><td>Services & Fleet Pages</td><td class="text-center"><svg class="icon-sm-check mx-auto" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" /></svg></td><td class="font-medium">$150</td></tr>
                                     <tr><td>Blog & Careers (Static Pages)</td><td class="text-center"><svg class="icon-sm-check mx-auto" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" /></svg></td><td class="font-medium">$50</td></tr>
                                     <tr><td>HubSpot Contact Form Integration</td><td class="text-center"><svg class="icon-sm-check mx-auto" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" /></svg></td><td class="font-medium">Included</td></tr>
-                                    <tr><td>Dark Mode Support</td><td class="text-center"><svg class="icon-sm-check mx-auto" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" /></svg></td><td class="font-medium">Included</td></tr>
                                     <tr class="bg-gray-50 font-bold"><td class="text-gray-900">Total</td><td></td><td class="text-gray-900">$500</td></tr>
                                 </tbody>
                             </table>
@@ -637,23 +668,7 @@
             // Set the initial state (Option 2 is active by default)
             switchTab(2);
 
-            // Hosting Cost Calculator
-            const calculateBtn = document.getElementById('calculate-btn');
-            const trafficInput = document.getElementById('traffic');
-            const storageInput = document.getElementById('storage');
-            const resultElem = document.getElementById('calc-result');
-
-            calculateBtn.addEventListener('click', () => {
-                const traffic = parseFloat(trafficInput.value) || 0;
-                const storage = parseFloat(storageInput.value) || 0;
-
-                // Simple estimation based on AWS-like pricing: $0.023/GB storage + $0.15/GB transfer
-                const storageCost = storage * 0.023;
-                const transferCost = traffic * 0.15;
-                const totalCost = (storageCost + transferCost).toFixed(2);
-
-                resultElem.textContent = `Estimated Cost: $${totalCost}`;
-            });
+            
         });
     </script>
 
